@@ -1,19 +1,0 @@
-{% extends "base.html" %}
-{% load i18n %}
-
-{% block title %}{% ifequal params.action "success" %}{% trans 'Validation e-mail sent' %}{% else %}{% trans 'Your user account was already active' %}{% endifequal %}{% endblock %}
-{% block robots %}noindex,nofollow{% endblock %}
-
-{% block nav-main %}
-{% include "userprofile/menu.html" %}
-{% endblock %}
-
-{% block content %}
-	<p class="{% ifequal params.action "success" %}success{% else %}notice{% endifequal %} large">
-	{% ifequal params.action "success" %}
-		{% trans "We've e-mailed you the e-mail validation link. You are going to receive it shortly" %}.
-	{% else %}
-		{% trans 'Your e-mail was already validated' %}. 
-	{% endifequal %}
-	</div>
-{% endblock %}
