@@ -1,13 +1,15 @@
-{% load i18n %}
+{% load i18n %}{% autoescape off %}
 {% trans "You're receiving this e-mail because you requested a password reset" %}
 {% blocktrans %}for your user account at {{ site_name }}{% endblocktrans %}.
 
-{% trans "Feel free to change this password going to this page:" %}
-
-http://{{ domain }}{% url password_change_with_key key %}
-
+{% trans "Please go to the following page and choose a new password:" %}
+{% block reset_link %}
+{{ protocol }}://{{ domain }}{% url password_reset_confirm uidb36=uid,token=token %}
+{% endblock %}
 {% trans "Your username, in case you've forgotten:" %} {{ user.username }}
 
 {% trans "Thanks for using our site!" %}
 
 {% blocktrans %}The {{ site_name }} team{% endblocktrans %}
+
+{% endautoescape %}
